Correct header spacing in index files

--- a/styles/home.css
+++ b/styles/home.css
@@ -30,7 +30,7 @@ header {
 }
 .my-role {
 	font-weight: 500;
-	padding: 0px 12px;
+	padding: 0px 12px 25px;
 }
 .header-intro {
 	max-width: 660px;
